package es.hugoalvarezajenjo.textadventure.ui.theme;

import java.awt.Dimension;

public final class Dimensions {
    public static final Dimension DEFAULT_WINDOW_SIZE = new Dimension(800, 600);
}
