package es.hugoalvarezajenjo.textadventure.ui.utils;

import java.awt.*;

public final class Fonts {
    public static final Font TITLE_FONT = new Font("Times New Roman", Font.PLAIN, 96);
    public static final Font NORMAL_FONT = new Font("Times New Roman", Font.PLAIN, 26);

}
